--- a/package.json
+++ b/package.json
@@ -3,18 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@aspnet/signalr": "^1.1.4",
     "@material-ui/core": "^4.3.0",
     "@material-ui/lab": "^4.0.0-alpha.21",
     "@types/react-dropzone": "^4.2.0",
+    "@types/react-facebook-login": "^4.1.0",
     "@types/react-router-dom": "^4.3.4",
+    "@types/react-share": "^2.1.1",
+    "bootstrap": "^4.3.1",
     "history": "^4.9.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.8.6",
     "react-dropzone": "^4.3.0",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.0.5",
     "react-navigation": "^3.11.1",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts-ts": "3.1.0"
+    "react-scripts-ts": "3.1.0",
+    "react-share": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
