--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "dependencies": {
     "@aspnet/signalr": "^1.1.4",
-    "@material-ui/core": "^4.3.0",
-    "@material-ui/lab": "^4.0.0-alpha.21",
-    "@types/react-dropzone": "^4.2.0",
+    "@material-ui/core": "^4.3.2",
+    "@material-ui/lab": "^4.0.0-alpha.23",
+    "@types/react-dropzone": "^4.2.2",
     "@types/react-facebook-login": "^4.1.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-share": "^2.1.1",
     "bootstrap": "^4.3.1",
+    "google-translate": "^2.3.0",
     "history": "^4.9.0",
-    "react": "^16.8.6",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
-    "react-dom": "^16.8.6",
+    "react-cookies": "^0.1.1",
+    "react-dom": "^16.9.0",
     "react-dropzone": "^4.3.0",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
@@ -22,7 +25,10 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts-ts": "3.1.0",
-    "react-share": "^3.0.0"
+    "react-share": "^3.0.0",
+    "react-speech-recognition": "^2.0.4",
+    "react-voice-input": "0.0.4",
+    "translate": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -31,9 +37,9 @@
     "eject": "react-scripts-ts eject"
   },
   "devDependencies": {
-    "@types/jest": "^24.0.16",
-    "@types/node": "^12.6.8",
-    "@types/react": "^16.8.24",
+    "@types/jest": "^24.0.17",
+    "@types/node": "^12.7.1",
+    "@types/react": "^16.9.1",
     "@types/react-dom": "^16.8.5",
     "typescript": "^3.5.3"
   }
