--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^16.9.0",
     "react-dropzone": "^4.3.0",
+    "react-facebook": "^8.0.4",
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.0.5",
     "react-navigation": "^3.11.1",
