--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react-facebook-login": "^4.1.0",
     "@types/react-router-dom": "^4.3.4",
     "@types/react-share": "^2.1.1",
+    "@types/react-webcam": "^1.1.0",
     "bootstrap": "^4.3.1",
     "google-translate": "^2.3.0",
     "history": "^4.9.0",
@@ -31,6 +32,7 @@
     "react-share": "^3.0.0",
     "react-speech-recognition": "^2.0.4",
     "react-voice-input": "0.0.4",
+    "react-webcam": "^1.1.1",
     "translate": "^1.1.0"
   },
   "scripts": {
