--- a/package.json
+++ b/package.json
@@ -31,9 +31,12 @@
     "react-router-dom": "^5.0.1",
     "react-scripts-ts": "3.1.0",
     "react-share": "^3.0.0",
+    "react-sharingbuttons": "^1.0.0",
+    "react-social-share-buttons": "^1.0.2",
     "react-speech-recognition": "^2.0.4",
     "react-voice-input": "0.0.4",
     "react-webcam": "^1.1.1",
+    "sharethis-reactjs": "^1.3.3",
     "translate": "^1.1.0"
   },
   "scripts": {
